# framework.security.smack

./: CMakeLists.txt  LICENSE  libsmack.pc.in  project.config  smack-app  smack-def
debian/: changelog  control  copyright  libsmack-dev.install  libsmack.install  rules  smack-utils.dirs  smack-utils.install  smack-utils.links  smack-utils.postinst
doc/: Makefile.am  smack_accesses_add.3
init/: smack.mount  smack.rc  smack.service
libsmack/: libsmack.c  libsmack.sym
libsmack/sys/: smack.h
modules_mobile/debian/: changelog
modules_mobile/init/: smack.service
modules_wearable/: configure.ac
modules_wearable/debian/: changelog
modules_wearable/init/: smack.mount
modules_wearable/packaging/: smack-utils.manifest
modules_wearable/utils/: Makefile.am
modules_wearable/utils/smackload-fast/: input.c  main.c  output.c
packaging/: 0001-systemd-path-change.patch  0002-libsmack-fix-unit-file-ordering.patch  smack.changes  smack.manifest  smack.spec
utils/: Makefile.am  chsmack.c  common.c  common.h
utils/smackload-fast/: Makefile.am  common.h  genmodes.c
